--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyDx_5XPuAnmnVxLE32Iwgc4Onj2u5Vh6Xw"></script>
     <title>React App</title>
   </head>
   <body>
